Fix T51890: Turning off viewport display for array modifier is blocking dupliface in final render

DupliVert/Face were not using render DM at render time.